# friction-api

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: client.cpp  client.py  friction_api.py  getScenes.cpp  getScenes.py  getScenes.sh  server.cpp
include/: adaptor.h  api.h  api.rep  api_dbus.h  api_global.h  bridge.h  host.h  plugin.h  plugins.h
src/: adaptor.cpp  api.cpp  api_dbus.cpp  bridge.cpp  bridge_main.cpp  host.cpp  plugins.cpp
tests/: client_main.cpp  server_main.cpp
tests/dummy-plugin/: CMakeLists.txt  dummy.json  dummyplugin.cpp  dummyplugin.h
